--- a/Project/Index.html
+++ b/Project/Index.html
@@ -116,11 +116,18 @@
                     <p class="chat-message">Mình cần tư vấn chọn Tour nghỉ dưỡng.</p>
                     <i class="far fa-check-square"></i>
                 </div>
-                <div class="boxchat-input">
-                    <input type="text" placeholder="Nhập tin nhắn của bạn...">
-                    <i class="fas fa-paperclip"></i>
-                    <i class="fas fa-paper-plane"></i>
+                <div class="boxchat-body customer">
+                    <div class="user-photo">
+                        <img src="img/view3.jpg">
+                    </div>
+                    <p class="chat-message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic earum asperiores quasi quibusdam dolorem commodi, odio explicabo modi sunt molestias sequi mollitia ut eos nam enim similique facilis deleniti ea, deserunt nulla itaque quae aperiam quod possimus! Iste aperiam quam, error deleniti possimus reprehenderit laboriosam quidem veniam ipsam debitis vero sapiente dolorem molestias enim fugiat, ullam officia doloribus natus necessitatibus, neque labore rerum blanditiis obcaecati et. Aspernatur fugit quod ullam, temporibus iusto beatae! Optio reiciendis ipsam porro sunt vel! Nulla?</p>
+                    <i class="far fa-check-square"></i>
                 </div>
+            </div>
+            <div class="boxchat-input">
+                <input type="text" placeholder="Nhập tin nhắn của bạn...">
+                <i class="fas fa-paperclip"></i>
+                <i class="fas fa-paper-plane"></i>
             </div>
         </div>
     </section>
