--- a/Project/Promotions.html
+++ b/Project/Promotions.html
@@ -79,8 +79,7 @@
     </header>
     <section>
         <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-            <i class="fas fa-comments t-gold"
-                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+            <i class="fas fa-comments t-gold"></i>
         </div>
         <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header reset">
@@ -175,7 +174,7 @@
                             <div class="col-lg-4 mientrung promo">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-hoi-an.jpg">
-                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                    <a href="Subpage-themes.html"><button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button></a>
                                         <div class="tag">
                                             <h5 class="t-white">-15%</h5>
                                         </div>
@@ -189,7 +188,7 @@
                             <div class="col-lg-4 miennam">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-da-lat.jpg">
-                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                    <a href="Subpage-themes.html"><button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button></a>
                                         <div class="title">
                                             <h2 class="t-white">Đà Lạt</h2>
                                             <span class="line white"></span>
@@ -200,7 +199,7 @@
                             <div class="col-lg-4 mientrung">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-da-nang.jpg">
-                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                    <a href="Subpage-themes.html"><button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button></a>
                                         <div class="title">
                                             <h2 class="t-white">Đà Nẵng</h2>
                                             <span class="line white"></span>
@@ -211,7 +210,7 @@
                             <div class="col-lg-4 mienbac promo">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-ha-giang.jpg">
-                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                    <a href="Subpage-themes.html"><button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button></a>
                                         <div class="tag">
                                             <h5 class="t-white">-35%</h5>
                                         </div>
@@ -225,7 +224,7 @@
                             <div class="col-lg-4 mienbac">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-mu-cang-chai.jpg"">
-                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                    <a href="Subpage-themes.html"><button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button></a>
                                         <div class="title">
                                             <h2 class="t-white">Mù Cang Chải</h2>
                                             <span class="line white"></span>
@@ -236,7 +235,7 @@
                             <div class="col-lg-4 mienbac promo">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-ninh-binh.jpg">
-                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                    <a href="Subpage-themes.html"><button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button></a>
                                         <div class="tag">
                                             <h5 class="t-white">-20%</h5>
                                         </div>
@@ -250,7 +249,7 @@
                             <div class="col-lg-4 mienbac">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-vinh-ha-long.jpg">
-                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                    <a href="Subpage-themes.html"><button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button></a>
                                         <div class="title">
                                             <h2 class="t-white">Vịnh Hạ Long</h2>
                                             <span class="line white"></span>
@@ -262,7 +261,7 @@
                     </div>
                 </div>
         </div>
-    </section>   
+    </section> 
     <section>
         <div class="about-banner--form">
             <div class="container center">
