--- a/Project/Subpage-themes.html
+++ b/Project/Subpage-themes.html
@@ -76,8 +76,7 @@
     </header>
     <section>
         <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-            <i class="fas fa-comments t-gold"
-                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+            <i class="fas fa-comments t-gold"></i>
         </div>
         <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header reset">
@@ -178,10 +177,80 @@
                     <button class="btn btn-like"><i class="fas fa-thumbs-up"></i> Like</button>
                     <button class="btn btn-share"><i class="fas fa-share-square"></i> Share</button>
                 </div>
-
             </div>  
+            <span class="line gold"></span>
         </div>
     </section>
+
+    <section>
+        <div class="container center">
+            <div class="box-comment">
+                <div class="input-comment">
+                    <img src="img/view1.jpg">
+                    <textarea name="" id="" cols="30" rows="3" placeholder="Viết bình luận..."></textarea>
+                </div>
+                <div class="box-other-comment">
+                    <div class="other-comment">
+                        <img src="img/view2.jpg">
+                        <div>
+                            <h5>MARIA De ANDRE'</h5>
+                            <h6>Great</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                    <div class="box-reply-comment">
+                        <h5 style="font-weight: bold;">Phản hồi</h5>
+                        <div class="reply-comment">
+                            <img src="img/view5.jpg">
+                            <div>
+                                <h5>Nguyễn Minh Luân</h5>
+                                <h6>Cảm ơn vì phản hồi của bạn !</h6>
+                            </div>
+                            <a href=""><i class="fas fa-heart"></i></a>
+                            <a href=""><i class="fas fa-reply"></i></a>
+                        </div>
+                        <div class="reply-comment">
+                            <img src="img/view5.jpg">
+                            <div>
+                                <h5>Nguyễn Minh Luân</h5>
+                                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ipsa unde quibusdam dolores impedit facere dolor accusamus nesciunt et dicta?</h6>
+                            </div>
+                            <a href=""><i class="fas fa-heart"></i></a>
+                            <a href=""><i class="fas fa-reply"></i></a>
+                        </div>
+                    </div>
+                    <div class="other-comment">
+                        <img src="img/view3.jpg">
+                        <div>
+                            <h5>LINDA FALANGY</h5>
+                            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempore eaque vitae quod maiores tempora, obcaecati a voluptates eligendi perspiciatis temporibus ut repellendus eum accusamus consequuntur, commodi at natus incidunt.</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                    <div class="other-comment">
+                        <img src="img/view4.jpg">
+                        <div>
+                            <h5>The Hung</h5>
+                            <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, veniam.</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                    <div class="other-comment">
+                        <img src="img/view1.jpg">
+                        <div>
+                            <h5>JOHN E. PERRY</h5>
+                            <h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis numquam consequuntur accusamus voluptates nostrum dicta consequatur earum rerum fuga voluptate!</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>  
 
     <section>
         <div class="about-banner--form">
