--- a/Project/blog-ocean.html
+++ b/Project/blog-ocean.html
@@ -49,13 +49,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="themes.html">Themes</a>
+                        <a class="nav-link" href="Themes.html">Themes</a>
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="Promotions.html">Promotions</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" style="color: goldenrod;" href="blogs.html">Blogs</a>
+                        <a class="nav-link" style="color: goldenrod;" href="Blogs.html">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
@@ -77,8 +77,7 @@
 
     <section>
         <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-            <i class="fas fa-comments t-gold"
-                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+            <i class="fas fa-comments t-gold"></i>
         </div>
         <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header reset">
@@ -127,7 +126,7 @@
         <div class="blog">
             <div class="container center">
                 <div class="blog-title t-white">
-                    <a class="t-gold fw-bold" href="index.html">Home</a> / Deep inside sand ocean
+                    <a class="t-gold fw-bold" href="index.html">Home</a> / Blogs / Deep inside sand ocean
                 </div> 
             </div>
             <div class="blog-img-back">
@@ -137,17 +136,19 @@
     </section>
 
     <section>
-        <div class="blog--ocean">
+        <div class="blog--ocean center">
             <div class="container" id="post">
                 <div class="blog--ocean__content paragraph center">
                     <div class="info--box">
                         <div class="author">
-                            <img src="img/view1.jpg" alt="">
+                            <img src="img/view5.jpg" alt="">
                             <div class="post--info">
-                                BY: <span class="t-gold"> Nguyễn Minh Luân</span> FROM <span class="t-gold">Vũng Tàu With Love</span>
+                                BY: <span class="t-gold"> Nguyễn Minh Luân</span> FROM <span class="t-gold">Vũng Tàu With
+                                    Love</span>
                             </div>
                         </div>
-                        <h1 style="font-size: 36px;">Vi vu Đồi Cát Bay ở <span class="t-gold">Mũi Né:</span> Trải nghiệm ‘cực chất’</h1>
+                        <h1 style="font-size: 36px;">Vi vu Đồi Cát Bay ở <span class="t-gold">Mũi Né:</span> Trải nghiệm
+                            ‘cực chất’</h1>
                     </div>
                     <div class="post--info__detail">
                         <div class="post--date">STEP 03 09 2021</div>
@@ -161,29 +162,44 @@
                     </div>
                     <h2 class="left">1. Đồi Cát Bay Mũi Né ở đâu?</h2>
                     <h6 class="justify">
-                        Tọa lạc ở khu phố 5, phường Mũi Né, thành phố Phan Thiết, Đồi Cát Bay ở Mũi Né là một trong những bãi cát trải dài nhiều cây số và lan rộng ở một diện tích không nhất định với tổng thế lớn.
-                        Đồi Cát Bay cách chợ Mũi Né khoảng 2km, và cách trung tâm thành phố Phan Thiết khoảng 23km về hướng Đông. Đồi cát được hình thành từ rất lâu đời, có tổng diện tích gần 50ha trải dài từ Bình Thuận đến Ninh Thuận.
+                        Tọa lạc ở khu phố 5, phường Mũi Né, thành phố Phan Thiết, Đồi Cát Bay ở Mũi Né là một trong những
+                        bãi cát trải dài nhiều cây số và lan rộng ở một diện tích không nhất định với tổng thế lớn.
+                        Đồi Cát Bay cách chợ Mũi Né khoảng 2km, và cách trung tâm thành phố Phan Thiết khoảng 23km về hướng
+                        Đông. Đồi cát được hình thành từ rất lâu đời, có tổng diện tích gần 50ha trải dài từ Bình Thuận đến
+                        Ninh Thuận.
                     </h6>
                     <img src="img/blog-content-img/content1.jpg" alt="" style="width: 100%">
                     <blockquote>
                         <i class="fas fa-quote-right" aria-hidden="true"></i>
-                        <span class="quote">Thật ra tôi cũng may mắn tìm được nơi đó, tôi không hỏi đường ai cả, tôi chỉ phóng xe lên và xuống Phan Thiết-Bình Thuận.</span>
+                        <span class="quote">Thật ra tôi cũng may mắn tìm được nơi đó, tôi không hỏi đường ai cả, tôi chỉ
+                            phóng xe lên và xuống Phan Thiết-Bình Thuận.</span>
                         <p class="t-gold">Minh Luân</p>
                     </blockquote>
                     <h2 class="left">2. Tại sao lại có tên là Đồi Cát Bay?</h2>
-                    <h6 class="justify">Không ít bạn thắc mắc về tên gọi của địa điểm du lịch này. Sở dĩ, có tên là Đồi Cát Bay vì hình dáng của nó thay đổi liên tục từng ngày, từng giờ. Đó chính là điểm đặc của đồi cát khiến bao người mê mẩn.
-                    <br>
-                    <br>
-                    Theo kinh nghiệm du lịch Phan Thiết, nếu bạn đến Đồi Cát Bay Mũi Né vào mùa gió, thì những cồn cát được thay đổi biến dạng qua từng cơn lốc. Nó thay đổi từng giờ và bạn khó bắt gặp những hình ảnh ấy được tái dựng lại. Tại sao lại như vậy? Nguyên nhân là do đồi cát chịu ảnh hưởng bởi các yêu tố của tự nhiên như thời tiết, khí hậu, gió mùa… Trong đó, hai cơ chế gió mùa Đông Bắc và gió mùa Tây Nam có ảnh hưởng trực tiếp lên Đồi Cát Bay nên hiện tượng biến chuyển về diện mạo, hình dáng của đồi cát. Qua đó, đã tạo nên một cảnh quan thiên nhiên vô cùng độc đáo.</h6>
+                    <h6 class="justify">Không ít bạn thắc mắc về tên gọi của địa điểm du lịch này. Sở dĩ, có tên là Đồi Cát
+                        Bay vì hình dáng của nó thay đổi liên tục từng ngày, từng giờ. Đó chính là điểm đặc của đồi cát
+                        khiến bao người mê mẩn.
+                        <br>
+                        <br>
+                        Theo kinh nghiệm du lịch Phan Thiết, nếu bạn đến Đồi Cát Bay Mũi Né vào mùa gió, thì những cồn cát
+                        được thay đổi biến dạng qua từng cơn lốc. Nó thay đổi từng giờ và bạn khó bắt gặp những hình ảnh ấy
+                        được tái dựng lại. Tại sao lại như vậy? Nguyên nhân là do đồi cát chịu ảnh hưởng bởi các yêu tố của
+                        tự nhiên như thời tiết, khí hậu, gió mùa… Trong đó, hai cơ chế gió mùa Đông Bắc và gió mùa Tây Nam
+                        có ảnh hưởng trực tiếp lên Đồi Cát Bay nên hiện tượng biến chuyển về diện mạo, hình dáng của đồi
+                        cát. Qua đó, đã tạo nên một cảnh quan thiên nhiên vô cùng độc đáo.
+                    </h6>
                     <img src="img/blog-content-img/content2.jpg" alt="" style="width: 100%">
                     <br> <br>
                     <h2 class="left">3. Ấn tượng trước sự thay đổi màu của Đồi Cát Bay ở Mũi Né</h2>
-                    <h6 class="justify">Bạn có biết! Màu của cát nơi đây do mỏ sắt cũ kiến tạo, nên có rất nhiều màu khác nhau. Theo như các tín đồ du lịch chia sẻ có đến 18 màu mà khách du lịch Mũi Né có thể thưởng thức. Bạn có thể tham khảo list vài loại màu dưới đây:
+                    <h6 class="justify">Bạn có biết! Màu của cát nơi đây do mỏ sắt cũ kiến tạo, nên có rất nhiều màu khác
+                        nhau. Theo như các tín đồ du lịch chia sẻ có đến 18 màu mà khách du lịch Mũi Né có thể thưởng thức.
+                        Bạn có thể tham khảo list vài loại màu dưới đây:
                         <br>
                         <ul style="line-height: 32px;">
                             <li>Màu đỏ: đây là màu chính của cát và là màu phổ biến nhất</li>
                             <li>Màu trắng: màu nằm trên bãi biển và có pha tạp chất</li>
-                            <li>Màu trắng xám: màu cát nằm tập trung ở ranh giới giữa Bình Thuận và Ninh Thuận, trải dài trên diện rộng. Nguyên nhân là do đất đai ở đây kém màu mỡ.</li>
+                            <li>Màu trắng xám: màu cát nằm tập trung ở ranh giới giữa Bình Thuận và Ninh Thuận, trải dài
+                                trên diện rộng. Nguyên nhân là do đất đai ở đây kém màu mỡ.</li>
                             <li>Màu đỏ đen: màu pha bùn, cứng và khó hòa tan.</li>
                             <li>Màu hồng: màu nằm dưới màu đỏ</li>
                         </ul>
@@ -191,43 +207,131 @@
                     <img src="img/blog-content-img/content3.jpg" alt="" style="width: 100%">
                     <br> <br>
                     <h2 class="left">4. Cách di chuyến đến Đồi Cát Bay Mũi Né?</h2>
-                    <h6 class="justify">Từ TP Hồ Chí Minh, Hà Nội, Đà Nẵng và các tỉnh thành khác, bạn có thể lựa chọn nhiều phương tiện khác nhau để di chuyển như: máy bay, tàu hỏa, xe khách.
+                    <h6 class="justify">Từ TP Hồ Chí Minh, Hà Nội, Đà Nẵng và các tỉnh thành khác, bạn có thể lựa chọn nhiều
+                        phương tiện khác nhau để di chuyển như: máy bay, tàu hỏa, xe khách.
                         <br>
                         <br>
-                        Nếu bạn đi xe khách hay tàu hỏa, thì đều có tuyến đường thẳng từ các tỉnh đến thành phố Phan Thiết. Còn máy bay, thì bạn cần đến sân bat Tân Sơn Nhất thuộc TP.Hồ Chí Minh hoặc sân bay Cam Ranh thuộc Nha Trang rồi bắt xe khách, tàu hỏa để di chuyển đến Bình Thuận.
+                        Nếu bạn đi xe khách hay tàu hỏa, thì đều có tuyến đường thẳng từ các tỉnh đến thành phố Phan Thiết.
+                        Còn máy bay, thì bạn cần đến sân bat Tân Sơn Nhất thuộc TP.Hồ Chí Minh hoặc sân bay Cam Ranh thuộc
+                        Nha Trang rồi bắt xe khách, tàu hỏa để di chuyển đến Bình Thuận.
                     </h6>
                     <img src="img/blog-content-img/content4.jpg" alt="" style="width: 100%">
                     <br> <br>
                     <h2 class="left">5. Nên đi Đồi Cát Mũi Né vào thời gian nào?</h2>
-                    <h6 class="justify">Thời gian thích hợp nhất du lịch Mũi Né là từ tháng 9 đến tháng 4. Đặc biệt là tháng 4 âm lịch hằng năm. Bởi lẽ, ở đồi cát Mũi Né sẽ có tổ chức cuộc thi trượt cát giữa các thanh niên trong khu vực. Vì vậy, lễ hội này thu hút rất nhiều người tham gia, rất náo nhiệt.</h6>
+                    <h6 class="justify">Thời gian thích hợp nhất du lịch Mũi Né là từ tháng 9 đến tháng 4. Đặc biệt là tháng
+                        4 âm lịch hằng năm. Bởi lẽ, ở đồi cát Mũi Né sẽ có tổ chức cuộc thi trượt cát giữa các thanh niên
+                        trong khu vực. Vì vậy, lễ hội này thu hút rất nhiều người tham gia, rất náo nhiệt.</h6>
                     <img src="img/blog-content-img/content5.jpg" alt="" style="width: 100%">
                     <br> <br>
                     <h2 class="left">6. Vẻ đẹp của Đồi Cát Bay</h2>
-                    <h6 class="justify">Thời điểm thích hợp nhất để bạn tham quan đồi cát Mũi Né từ 5 – 8 giờ sáng vì lúc này trời còn sớm và cát còn mát.
+                    <h6 class="justify">Thời điểm thích hợp nhất để bạn tham quan đồi cát Mũi Né từ 5 – 8 giờ sáng vì lúc
+                        này trời còn sớm và cát còn mát.
                         <br> <br>
-                        Khi đến đây, bạn sẽ bị cuốn hút bởi những đừng cong uốn lượn huyền bí. Ấn tượng trước những vân cát lạ mắt, thay đổi hình dạng và màu sắc có khi vàng, khi đỏ… tạo nên một bức tranh thiên nhiên tuyệt đẹp, thu hút mọi ánh nhìn.
+                        Khi đến đây, bạn sẽ bị cuốn hút bởi những đừng cong uốn lượn huyền bí. Ấn tượng trước những vân cát
+                        lạ mắt, thay đổi hình dạng và màu sắc có khi vàng, khi đỏ… tạo nên một bức tranh thiên nhiên tuyệt
+                        đẹp, thu hút mọi ánh nhìn.
                         <br> <br>
-                        Không chỉ với du khách đến thăm quan, điểm đến này còn làm say đắm những nhà nhiếp ảnh, họa sĩ cùng các nghệ nhân tài hoa khác đến sáng tạo nghệ thuật.
+                        Không chỉ với du khách đến thăm quan, điểm đến này còn làm say đắm những nhà nhiếp ảnh, họa sĩ cùng
+                        các nghệ nhân tài hoa khác đến sáng tạo nghệ thuật.
                     </h6>
                     <img src="img/blog-content-img/content6.jpg" alt="" style="width: 100%">
                     <br> <br>
                     <h2 class="left">7. Vui chơi tại Đồi Cát Bay ở Mũi Né</h2>
-                    <h6 class="justify">Đến Đồi Cát Bay, du khách không thể bỏ qua trò chơi trượt cát thú vị. Chỉ với 10.000 đồng/ván trượt/buổi trượt, các bạn sẽ được hướng dẫn tận tình các thao tác cơ bản.
-                    <br> <br>
-                    Rất nhiều cảm giác lẫn lộn diễn ra trong trò chơi này. Từ sợ hãi rồi la hét đến thích thú khu chinh phục được những đồi cát cao hơn. Một lời khuyên nho nhỏ là bạn nên tham gia trò trượt cát vào sáng sớm hoặc chiều muộn vì lúc này cát đỡ nóng, đi lại dễ dàng hơn và không bị rát chân.</h6>
+                    <h6 class="justify">Đến Đồi Cát Bay, du khách không thể bỏ qua trò chơi trượt cát thú vị. Chỉ với 10.000
+                        đồng/ván trượt/buổi trượt, các bạn sẽ được hướng dẫn tận tình các thao tác cơ bản.
+                        <br> <br>
+                        Rất nhiều cảm giác lẫn lộn diễn ra trong trò chơi này. Từ sợ hãi rồi la hét đến thích thú khu chinh
+                        phục được những đồi cát cao hơn. Một lời khuyên nho nhỏ là bạn nên tham gia trò trượt cát vào sáng
+                        sớm hoặc chiều muộn vì lúc này cát đỡ nóng, đi lại dễ dàng hơn và không bị rát chân.
+                    </h6>
                     <img src="img/blog-content-img/content7.jpg" alt="" style="width: 100%">
                     <br> <br>
-                    <h6 class="justify">Nếu bạn thích cảm giác mạnh thì có thể chơi môn thể thao đi xe địa hình trên đồi cát. Đây cũng là một trải nghiệm vui chơi khó bỏ qua đấy nhé!</h6>
+                    <h6 class="justify">Nếu bạn thích cảm giác mạnh thì có thể chơi môn thể thao đi xe địa hình trên đồi
+                        cát. Đây cũng là một trải nghiệm vui chơi khó bỏ qua đấy nhé!</h6>
                     <img src="img/blog-content-img/content8.jpg" alt="" style="width: 100%">
-
+    
                     <div class="like-share">
                         <button class="btn btn-like"><i class="fas fa-thumbs-up"></i> Like</button>
                         <button class="btn btn-share"><i class="fas fa-share-square"></i> Share</button>
                     </div>
                 </div>
             </div>
+            <span class="line gold"></span>
         </div>
-    </div>
+    </section>
+
+    <section>
+        <div class="container center">
+            <div class="box-comment">
+                <div class="input-comment">
+                    <img src="img/view1.jpg">
+                    <textarea name="" id="" cols="30" rows="3" placeholder="Viết bình luận..."></textarea>
+                </div>
+                <div class="box-other-comment">
+                    <div class="other-comment">
+                        <img src="img/view2.jpg">
+                        <div>
+                            <h5>MARIA De ANDRE'</h5>
+                            <h6>Great</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                    <div class="box-reply-comment">
+                        <h5 style="font-weight: bold;">Phản hồi</h5>
+                        <div class="reply-comment">
+                            <img src="img/view5.jpg">
+                            <div>
+                                <h5>Nguyễn Minh Luân</h5>
+                                <h6>Cảm ơn vì phản hồi của bạn !</h6>
+                            </div>
+                            <a href=""><i class="fas fa-heart"></i></a>
+                            <a href=""><i class="fas fa-reply"></i></a>
+                        </div>
+                        <div class="reply-comment">
+                            <img src="img/view5.jpg">
+                            <div>
+                                <h5>Nguyễn Minh Luân</h5>
+                                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ipsa unde quibusdam
+                                    dolores impedit facere dolor accusamus nesciunt et dicta?</h6>
+                            </div>
+                            <a href=""><i class="fas fa-heart"></i></a>
+                            <a href=""><i class="fas fa-reply"></i></a>
+                        </div>
+                    </div>
+                    <div class="other-comment">
+                        <img src="img/view3.jpg">
+                        <div>
+                            <h5>LINDA FALANGY</h5>
+                            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempore eaque vitae quod
+                                maiores tempora, obcaecati a voluptates eligendi perspiciatis temporibus ut repellendus eum
+                                accusamus consequuntur, commodi at natus incidunt.</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                    <div class="other-comment">
+                        <img src="img/view4.jpg">
+                        <div>
+                            <h5>The Hung</h5>
+                            <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, veniam.</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                    <div class="other-comment">
+                        <img src="img/view1.jpg">
+                        <div>
+                            <h5>JOHN E. PERRY</h5>
+                            <h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis numquam consequuntur
+                                accusamus voluptates nostrum dicta consequatur earum rerum fuga voluptate!</h6>
+                        </div>
+                        <a href=""><i class="fas fa-heart"></i></a>
+                        <a href=""><i class="fas fa-reply"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section>
@@ -369,11 +473,10 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="">Themes</a>
-                <a class="footer-font" href="">Promotions</a>
-                <a class="footer-font" href="">Blogs</a>
-                <a class="footer-font" href="">About</a>
-                <a class="footer-font" href="">Contact</a>
+                <a class="footer-font" href="Themes.html">Themes</a>
+                <a class="footer-font" href="Promotions.html">Promotions</a>
+                <a class="footer-font" href="Blogs.html">Blogs</a>
+                <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
         </div>
