--- a/Project/themes.html
+++ b/Project/themes.html
@@ -80,8 +80,7 @@
     </header>
     <section>
         <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-            <i class="fas fa-comments t-gold"
-                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+            <i class="fas fa-comments t-gold"></i>
         </div>
         <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header reset">
@@ -152,7 +151,7 @@
                 <h5>Du Lịch Phố Cổ</h5>
                 <span class="title-line"></span>
                 <p class="description">
-                    Enjoy <i class="keyword">the fresh life</i> in the countryside
+                    <i class="keyword">Retro</i>
                 </p>
                 <a href="#oldtown"><button type="button" class="btn btn-outline-secondary">View More</button></a>
             </div>
