--- a/Project/About.html
+++ b/Project/About.html
@@ -80,8 +80,7 @@
     </header>
     <section>
         <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-            <i class="fas fa-comments t-gold"
-                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+            <i class="fas fa-comments t-gold"></i>
         </div>
         <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header reset">
