--- a/Project/Index.html
+++ b/Project/Index.html
@@ -492,7 +492,7 @@
                         <form>
                         <div class="mb-3">
                             <label for="message-text" class="col-form-label" style="font-weight: bold;">Write your feedback:</label>
-                            <textarea class="form-control" id="message-text" rows="7" placeholder="Phản hồi của bạn..."></textarea>
+                            <textarea class="form-control" id="message-text" rows="10" placeholder="Phản hồi của bạn..." style="resize: none;"></textarea>
                         </div>
                         </form>
                     </div>
