--- a/Project/blogs.html
+++ b/Project/blogs.html
@@ -236,14 +236,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="container newpost-box center">
+                    <a href="Newpost.html"><button class="btn btn-primary btn-newpost"><h5>New post</h5></button></a>
+                </div>
                 <span class="line-gold"></span>
             </div>
         </div>
     </div>
     </section>
 
-
-    <!-- Cop bên trang About -->
     <section>
         <div class="about-banner--form">
             <div class="container center">
