--- a/Project/Subpage-themes.html
+++ b/Project/Subpage-themes.html
@@ -124,7 +124,7 @@
         <div class="about">
             <div class="container center">
                 <div class="about-title t-white">
-                    <a class="t-gold fw-bold" href="index.html">Home</a> / Themes
+                    <a class="t-gold fw-bold" href="index.html">Home</a> / Themes / Du lịch biển đảo Phú Quốc
                 </div> 
             </div>
             <div class="about-video-back">
